--- a/reactbook/excel.html
+++ b/reactbook/excel.html
@@ -49,19 +49,36 @@
             },
 
             getInitialState: function(){
-                return {data: this.props.initialData}
+                return {
+                    data: this.props.initialData,
+                    sortby: null,
+                    descending: false,
+                    edit: null
+                    }
             },
 
             _sort: function(e){
                 var column = e.target.cellIndex;
                 var data = this.state.data.slice();
+                var descending = this.state.sortby === column && !this.state.descending;
                 ///sortの仕組みがよくわからん
                 data.sort(function(a,b){
-                    return a[column] > b[column] ? 1 : -1;
+                    return descending  
+                        ? (a[column] < b[column] ? 1 : -1) 
+                        : (a[column] > b[column] ? 1 : -1)
                 });
                 this.setState({
-                    data: data
+                    data: data,
+                    sortby: column,
+                    descending: descending
                 });
+            },
+
+            _showEditor: function(e){
+                this.setState({edit: {
+                    row: parseInt(e.target.dataset.row, 10),
+                    cell: e.target.cellIndex
+                }})
             },
 
             render: function(){
@@ -70,16 +87,30 @@
                         React.DOM.thead({onClick: this._sort},
                             React.DOM.tr(null,
                                 this.props.headers.map(function(title,idx){
+                                    if(this.state.sortby === idx){
+                                        title += this.state.descending ? ' \u2191' : ' \u2193'
+                                    }
                                     return React.DOM.th({key: idx},title);
-                                })
+                                },this)
                             )
                         ),
-                        React.DOM.tbody(null,
-                            this.state.data.map(function(row,idx){
+                        React.DOM.tbody({onDoubleClick: this._showEditor},
+                            this.state.data.map(function(row,rowidx){
                                 return (
-                                    React.DOM.tr({key:idx},
+                                    React.DOM.tr({key:rowidx},
                                         row.map(function(cell,idx){
-                                            return React.DOM.td({key:idx},cell);
+
+                                            //TODO
+                                            var edit = this.state.edit:
+                                            if(edit && edit.row === rowidx && edit.cell === idx){
+                                                //
+                                            }
+
+
+                                            return React.DOM.td({
+                                                key:idx,
+                                                'data-row': rowidx
+                                                },cell);
                                         })
                                     )
                                 )
